src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Current_Distributor__c</fullName>
        <label>Current Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>OM_AVP__c</fullName>
        <label>AVP</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Accept_Backorders__c</fullName>
        <label>Accept Backorders?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allow Back Orders</fullName>
                </value>
                <value>
                    <fullName>Do Not Allow Backorders</fullName>
                </value>
                <value>
                    <fullName>Ship Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Account_Department__c</fullName>
        <label>Account Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Account_Risk_Status__c</fullName>
        <description>Low Risk:  Below 10% Chance of Loss
Mild Risk:  10% - 25% Chance of Loss
Moderate Risk:  26% -50% Chance of Loss
Significant Risk:  Over 50% Chance of Loss</description>
        <inlineHelpText>Low Risk:  Below 10% Chance of Loss
Mild Risk:  10% - 25% Chance of Loss
Moderate Risk:  26% -50% Chance of Loss
Significant Risk:  Over 50% Chance of Loss</inlineHelpText>
        <label>Account Risk Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Risk</fullName>
                </value>
                <value>
                    <fullName>Mild Risk</fullName>
                </value>
                <value>
                    <fullName>Moderate Risk</fullName>
                </value>
                <value>
                    <fullName>Significant Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Account_Status_Reason__c</fullName>
        <inlineHelpText>Write the reason for the account status change</inlineHelpText>
        <label>Account Status Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Agreement_Expiration_Date__c</fullName>
        <label>Agreement Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OM_Allocate_Inventory__c</fullName>
        <label>Allocate Inventory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Allow_Future_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Future Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Allow_Repacks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Repacks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Allow_Substitutions__c</fullName>
        <label>Allow Substitutions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B Bypass Subrule2 and Subrule3</fullName>
                </value>
                <value>
                    <fullName>N No</fullName>
                </value>
                <value>
                    <fullName>P Pend Order for Review</fullName>
                </value>
                <value>
                    <fullName>Y YES</fullName>
                </value>
                <value>
                    <fullName>N NO, ACK Copy is not Printed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Approx_Dollar_Volume__c</fullName>
        <label>Approx Dollar Volume</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_Attention__c</fullName>
        <label>Attention</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_BOP_License_Effective_Date__c</fullName>
        <label>BOP License Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OM_BOP_License_Expiration_Date__c</fullName>
        <label>BOP License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OM_BOP_License_Number__c</fullName>
        <label>BOP License Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_BOP_License_Type__c</fullName>
        <label>BOP License Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_BOP_License_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BOP License Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Billing Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OM_Billing_PO_Box__c</fullName>
        <label>Billing P.O. Box</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Carrier_Type__c</fullName>
        <description>CMF Account Carrier Types</description>
        <label>Carrier Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OM_Carrier_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Case_Code__c</fullName>
        <label>Case Code</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Class_of_Trade__c</fullName>
        <label>Class of Trade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OM_Class_of_Trade</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_County__c</fullName>
        <label>County</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Credit_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to hold an account for credit reasons.</inlineHelpText>
        <label>Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_Credit_Risk_Rating__c</fullName>
        <label>Credit Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>A-</fullName>
                </value>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>B-</fullName>
                </value>
                <value>
                    <fullName>B+</fullName>
                </value>
                <value>
                    <fullName>BK</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>COL</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Customer_GPO_ID_Number__c</fullName>
        <label>Customer GPO ID Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_DC_GM_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DC GM Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_DC_Legacy_Number__c</fullName>
        <label>DC Legacy Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_DCs_Affected__c</fullName>
        <label>DCs Affected</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OM_Servicing_DC</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_DEA_Number__c</fullName>
        <label>DEA Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Dealer_Status_Posting_Date__c</fullName>
        <label>Dealer Status Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OM_Deliver_to_Dock__c</fullName>
        <label>Deliver to Dock?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Delivery_Comment__c</fullName>
        <label>Delivery Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OM_Department_Name__c</fullName>
        <label>Department Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_EDI_Invoices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDI Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Facility_ID__c</fullName>
        <description>Facility ID from integration</description>
        <externalId>true</externalId>
        <label>Facility ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Federal_Tax_ID__c</fullName>
        <label>Federal Tax ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Flag_for_Finance_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag for Finance Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Freight_Billing__c</fullName>
        <label>Freight Billing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>Collect</fullName>
                </value>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_GPO_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GPO Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_GPO_Ranking__c</fullName>
        <label>GPO Ranking</label>
        <summaryFilterItems>
            <field>OM_Group_Relationships__c.OM_GPO_Ranking__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OM_Group_Relationships__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OM_Group_Relationships__c.OM_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OM_HIN_Number__c</fullName>
        <label>HIN Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Inside_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inside Sales</label>
        <referenceTo>OM_Sales_Rep__c</referenceTo>
        <relationshipLabel>Inside Sales Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OM_Is_shipto_location_an_owned_entity_TA__c</fullName>
        <label>Is shipto location owned entity of TA?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_JIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JIT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Legend_License_Number__c</fullName>
        <label>Legend License Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Location_ID__c</fullName>
        <label>Location ID</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_MDM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>MDM External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_MDM_ID__c</fullName>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Monitor_Class__c</fullName>
        <label>Monitor Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>AB</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>ABCD</fullName>
                </value>
                <value>
                    <fullName>No Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Monitor_Stock__c</fullName>
        <label>Monitor Stock</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Monitor_Velocity__c</fullName>
        <label>Monitor Velocity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Nickname__c</fullName>
        <inlineHelpText>Enter accepted name if it differs from the formal/legal name of the account.</inlineHelpText>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Non_Address_Info__c</fullName>
        <label>Non-Address Info</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OM_Number_of_Beds__c</fullName>
        <label>Number of Beds</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_Number_of_Open_Cases__c</fullName>
        <description>Number of open cases attached to acct; populated by process builder and flow</description>
        <label>Number of Open Cases</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_OMAR_ID__c</fullName>
        <externalId>true</externalId>
        <label>OMAR ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_OMNI_II_Key__c</fullName>
        <label>OMNI II Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Omni_ID__c</fullName>
        <externalId>true</externalId>
        <label>Omni ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Ordering_Unit__c</fullName>
        <label>Ordering Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Outside_Sales_Rep__c</fullName>
        <externalId>true</externalId>
        <label>Outside Sales Rep</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Outside_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outside Sales</label>
        <referenceTo>OM_Sales_Rep__c</referenceTo>
        <relationshipLabel>Outside Sales Accounts</relationshipLabel>
        <relationshipName>Outside_Sales_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OM_Override_Default_DC_UOM__c</fullName>
        <label>Override Default DC UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Parent_IDN_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent/IDN Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent/IDN Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactional Accounts</relationshipLabel>
        <relationshipName>Transactional_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OM_Picking_Label__c</fullName>
        <label>Picking Label</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Code B</fullName>
                </value>
                <value>
                    <fullName>Code Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Price_Rounding__c</fullName>
        <label>Price Rounding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Extend Price to 4 digits after the decimal</fullName>
                </value>
                <value>
                    <fullName>Extend Price to 2 digits after the decimal</fullName>
                </value>
                <value>
                    <fullName>Round Price (2 digit conventional rounding)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Primary_DC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary DC</label>
        <referenceTo>OM_DC__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OM_Print_Invoices__c</fullName>
        <label>Print Invoices</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Purchase_Levels__c</fullName>
        <label>Purchase Levels</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OM_Purchase_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_RVP__c</fullName>
        <label>RVP</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OM_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Reporting_Type__c</fullName>
        <label>Reporting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OM_Reporting_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Require_Pharmacy_License__c</fullName>
        <label>Require Pharmacy License</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Risk_Indicator__c</fullName>
        <formula>IF(  ISPICKVAL(OM_Account_Risk_Status__c, &quot;Low Risk&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0154B0000009gKi&quot;,&quot;&quot;,20,20),
IF ( ISPICKVAL(OM_Account_Risk_Status__c, &quot;Mild Risk&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0154B0000009gKn&quot;,&quot;&quot;, 20, 20),
IF  ( ISPICKVAL(OM_Account_Risk_Status__c, &quot;Moderate Risk&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0154B0000009gKs&quot;,&quot;&quot;, 20, 20),
IF   ( ISPICKVAL(OM_Account_Risk_Status__c, &quot;Significant Risk&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0154B0000009gKx&quot;,&quot;&quot;, 20, 20),
&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Secondary_DC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary DC</label>
        <referenceTo>OM_DC__c</referenceTo>
        <relationshipLabel>Accounts (Secondary DC)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OM_Shipping_P_O_Box__c</fullName>
        <label>Shipping P.O. Box</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Solutions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solutions</label>
        <referenceTo>OM_Sales_Rep__c</referenceTo>
        <relationshipLabel>Solutions Accounts</relationshipLabel>
        <relationshipName>Solutions_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Credit Hold</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Propsect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Stockpiling__c</fullName>
        <label>Stockpiling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monitor Stockpile by CIM Usage</fullName>
                </value>
                <value>
                    <fullName>Monitor Stockpile by Previous or Average</fullName>
                </value>
                <value>
                    <fullName>No stockpile Monitoring (default value)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Subgroup_ID__c</fullName>
        <description>Subgroup ID from integration - on transactional account only</description>
        <externalId>true</externalId>
        <label>Subgroup ID</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Subgroup_Name__c</fullName>
        <description>Subgroup name from MDM - for transactional accounts only</description>
        <label>Subgroup Name</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OM_Suite_Dept_Number__c</fullName>
        <label>Suite/Dept Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Sum_of_Opportunities__c</fullName>
        <label>Sum of Open Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OM_Surgitrack__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Surgitrack</label>
        <referenceTo>OM_Sales_Rep__c</referenceTo>
        <relationshipLabel>Surgitrack Accounts</relationshipLabel>
        <relationshipName>Surgitrack_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OM_Tax_Area_IDs_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Area IDs Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Tax_Exempt_Expiration_Date__c</fullName>
        <label>Tax Exempt Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OM_Tax_Exempt_ID__c</fullName>
        <label>Tax Exempt ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Tax_Exempt_Status__c</fullName>
        <label>Tax Exempt Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Non-Exempt</fullName>
                </value>
                <value>
                    <fullName>Direct Pay</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>Indian Reservation</fullName>
                </value>
                <value>
                    <fullName>Local/State Government</fullName>
                </value>
                <value>
                    <fullName>Taxable - Override</fullName>
                </value>
                <value>
                    <fullName>Resale</fullName>
                </value>
                <value>
                    <fullName>Taxable - Regular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Tax_Exemption_Certification_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Exemption Certification Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Tier__c</fullName>
        <inlineHelpText>Tier 1 : $200M or Greater; 
Tier 2 : $100M - $199M; 
Crown Jewels : $25M - $99M;
Gems : $10M - $24M</inlineHelpText>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Crown Jewel</fullName>
                </value>
                <value>
                    <fullName>Gem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Total_number_of_Opportunities__c</fullName>
        <label>Total number of Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OM_Transactional_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transactional Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Transactional Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Child Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OM_University_Academic_Medical_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <label>University/Academic Medical Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Cases__c</fullName>
        <formula>IF(OM_Number_of_Open_Cases__c &gt;= 1,IMAGE(&apos;/resource/RedFlag&apos;,&quot;&quot;,20,20),IMAGE(&apos;/resource/FlagOutline&apos;,&quot;&quot;,30,30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Cases</label>
        <type>Text</type>
    </fields>
</CustomObject>